new_code/error.txt
(cantera) [jsampayan4914@gpu004 new_code]$ ./build.sh 
rm: cannot remove '*.o': No such file or directory
rm: cannot remove '*.exe': No such file or directory
reactor.cpp:716:24: error: member reference base type 'UserData' (aka '(unnamed struct at ./reactor.hpp:52:9) *') is not a structure or union
  716 |         double c = data->n[i+1];
      |                    ~~~~^ ~
reactor.cpp:720:30: error: member reference base type 'UserData' (aka '(unnamed struct at ./reactor.hpp:52:9) *') is not a structure or union
  720 |     double T = Ith(yy,1)*data->n[nSp+1] + data->n[0];
      |                          ~~~~^ ~
reactor.cpp:720:47: error: member reference base type 'UserData' (aka '(unnamed struct at ./reactor.hpp:52:9) *') is not a structure or union
  720 |     double T = Ith(yy,1)*data->n[nSp+1] + data->n[0];
      |                                           ~~~~^ ~
reactor.cpp:721:20: error: member reference base type 'UserData' (aka '(unnamed struct at ./reactor.hpp:52:9) *') is not a structure or union
  721 |     double p = data->pressure;
      |                ~~~~^ ~~~~~~~~
reactor.cpp:771:26: error: member reference base type 'UserData' (aka '(unnamed struct at ./reactor.hpp:52:9) *') is not a structure or union
  771 |         double c_j = data->n[j+1];
      |                      ~~~~^ ~
reactor.cpp:772:25: error: member reference base type 'UserData' (aka '(unnamed struct at ./reactor.hpp:52:9) *') is not a structure or union
  772 |         dTdY(j) /= (data->n[nSp+1] * c_j);
      |                     ~~~~^ ~
reactor.cpp:776:26: error: member reference base type 'UserData' (aka '(unnamed struct at ./reactor.hpp:52:9) *') is not a structure or union
  776 |         double c_j = data->n[j+1];
      |                      ~~~~^ ~
reactor.cpp:778:30: error: member reference base type 'UserData' (aka '(unnamed struct at ./reactor.hpp:52:9) *') is not a structure or union
  778 |             double c_i = data->n[i+1];
      |                          ~~~~^ ~
reactor.cpp:783:5: error: use of undeclared identifier 'SUNSparseMatrix'; did you mean 'SUNDenseMatrix'?
  783 |     SUNSparseMatrix A = J;
      |     ^~~~~~~~~~~~~~~
      |     SUNDenseMatrix
/home/jsampayan4914/miniconda3/envs/cantera/include/sunmatrix/sunmatrix_dense.h:80:27: note: 'SUNDenseMatrix' declared here
   80 | SUNDIALS_EXPORT SUNMatrix SUNDenseMatrix(sunindextype M, sunindextype N,
      |                           ^
reactor.cpp:783:20: error: expected ';' after expression
  783 |     SUNSparseMatrix A = J;
      |                    ^
      |                    ;
reactor.cpp:783:23: error: array type 'double[1000000]' is not assignable
  783 |     SUNSparseMatrix A = J;
      |                     ~ ^
reactor.cpp:784:5: error: use of undeclared identifier 'SUNSparseMatrixZero'
  784 |     SUNSparseMatrixZero(A);
      |     ^
reactor.cpp:787:9: error: use of undeclared identifier 'SUNSparseMatrixSet'
  787 |         SUNSparseMatrixSet(A,0,j+1,dTdY(j));
      |         ^
reactor.cpp:793:17: error: use of undeclared identifier 'SUNSparseMatrixSet'
  793 |                 SUNSparseMatrixSet(A,i+1,j+1,v);
      |                 ^
reactor.cpp:797:12: error: member reference base type 'UserData' (aka '(unnamed struct at ./reactor.hpp:52:9) *') is not a structure or union
  797 |     if(data->myNeed==1)
      |        ~~~~^ ~~~~~~
reactor.cpp:804:32: error: member reference base type 'UserData' (aka '(unnamed struct at ./reactor.hpp:52:9) *') is not a structure or union
  804 |                 newSR(i,j)=data->SR[i+j*NEQ];
      |                            ~~~~^ ~~
reactor.cpp:805:24: error: use of undeclared identifier 'SUNSparseMatrix_Get'
  805 |                 Q(i,j)=SUNSparseMatrix_Get(A,i,j);
      |                        ^
reactor.cpp:806:21: error: member reference base type 'UserData' (aka '(unnamed struct at ./reactor.hpp:52:9) *') is not a structure or union
  806 |                 data->JJ[i+j*NEQ]=Q(i,j);
      |                 ~~~~^ ~~
reactor.cpp:816:37: error: member reference base type 'UserData' (aka '(unnamed struct at ./reactor.hpp:52:9) *') is not a structure or union
  816 |         double tau = std::max(t-data->time,0.0);
      |                                 ~~~~^ ~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
ifx: error #10236: File not found: 'reactor.o'
(cantera) [jsampayan4914@gpu004 new_code]$ 
